# test

./: .env  .env.example  README.md  config.example.yaml  pyproject.toml
.artifacts/api-cmp-1/: references.bib
.artifacts/compute-test/: executed_notebook.ipynb  table_analysis.json
.artifacts/eval-wf-6ec17cf3-a269-4266-a5de-8708fbf81f50/: references.bib
.artifacts/eval-wf-e3a7d4b1-bf74-443d-945a-7dd4bd6c195b/: references.bib
.artifacts/java-artifact-success/: references.bib
.artifacts/real-e2e-compare/: references.bib
.artifacts/vector_store/: doc-4a59a4ca-ef0a-459a-a27e-166107927afb.json  doc-eb82c7a8-c5af-4a6b-982e-16e764ed52f0.json
.artifacts/wf-cmp/: references.bib
.artifacts/wf-compute-standalone/: executed_notebook.ipynb  table_analysis.json
.artifacts/wf-tool-cmp/: references.bib
.test_tmp/24d3fafa-a4fb-4452-beb4-9c2f916d7538/: sample.xlsx
.test_tmp/29003557-cddb-4070-9fa6-f39755338a89/: sample.xlsx
.test_tmp/38ce6759-e8b7-433e-9bbd-a2b2d40b8f57/: sample.xlsx
.test_tmp/3c014917-3aad-436e-8224-294d90eec616/: sample.xlsx
.test_tmp/4076856b-7706-4c96-b042-1f7d780606fa/: sample.xlsx
app/: api_schemas.py  config.py  dependencies.py  main.py
domain/: __init__.py  agent_state.py  base.py  context.py  document.py  observability.py  paper.py
evals/: schemas.py
graph/: __init__.py  recovery.py  state.py
integrations/: __init__.py  arxiv_client.py  checkpoint_store.py  crossref_client.py  embed_client.py  java_client.py  llm_client.py  llm_runtime.py  object_store.py  openalex_client.py  prompt_registry.py  provider_errors.py  trace_store.py  vector_store.py
judge/: answer_quality.py  trajectory.py
observability/: __init__.py  emitter.py  metrics.py  recorder.py
prompts/: registry.json
research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: bootstrap_dev.py  run_local_eval.py
tests/: conftest.py
tools/: __init__.py  base.py  registry.py
(+695 files in other folders)
