[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Executable research agent with LangGraph + Pydantic v2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "langgraph>=0.2.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
packages = [
  "app",
  "domain",
  "tools",
  "tools.academic",
  "tools.document",
  "tools.library",
  "tools.synthesis",
  "tools.citation",
  "tools.compute",
  "tools.judge",
  "tools.observability",
  "graph",
  "graph.nodes",
  "graph.workflows",
  "integrations",
  "judge",
  "observability",
  "evals",
  "evals.runners",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]